[metadata]
name = MatplotLove
description = A simple project to plot animated hearts for Valentines Day. Or any day you want to show your love.
author = Francisco Bustamante
license = BEERWARE LICENSE (Revision 42)
license_file = LICENSE
platforms = linux, osx, cygwin, win32

[options]
packages = matplotlove
python_requires = >= 3.6
package_dir = =src
zip_safe = no